framec_tests/language_specific/rust/v3_outline/positive/basic_outline.frm
@target rust

system S {
    actions:
        do_it() {
            // native body
        }
}
