framec_tests/language_specific/rust/v3_outline/negative/multi_issue_outline_tolerant.frm
@target rust

system S {
    machine:
        $A
        e() {
            => $^ oops
            -> $ZZ();
        }
}

